<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/app_name_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/Law_base"
            android:textColor="@color/text_color_black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/choice_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name_heading"
            android:fontFamily="@font/arima_madurai_light"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/under_heading_text"
            android:textColor="@color/text_color_black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_processualnij"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/choice_explanation"
            android:layout_marginTop="@dimen/margin_top_main"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/process" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/processualnij_color_text"
                    android:text="@string/process_codex"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_UAK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_processualnij"
            android:layout_marginTop="@dimen/margin_top_main"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ugolovno_administrativ" />

                <TextView
                    android:id="@+id/self_color_text"
                    style="@style/TextViewStyle"
                    android:text="@string/UAK" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_road_codex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_UAK"
            android:layout_marginTop="@dimen/margin_top_main"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dorkod" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/road_color_text"
                    android:text="@string/road_laws"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_ten_codes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_road_codex"
            android:layout_marginTop="@dimen/margin_top_main"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ten_four" />

                <TextView
                    style="@style/TextViewStyle"
                    android:id="@+id/ten_code_text"
                    android:text="@string/ten_codes" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view_ten_codes"
            android:layout_marginTop="80dp"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_75dp"
                    android:src="@drawable/author" />

                <TextView
                    style="@style/TextViewStyle"
                    android:textSize="10sp"
                    android:id="@+id/author_color_text"
                    android:text="@string/created_by_aleksei_chistiakov_12_12_2023" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>
